COMMIT: Database configuration added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-
+# Database connection
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource-url=jdbc::postgresql://x:x/database_name
+spring.datasource.username=postgres
+spring.datasource.password=password
