--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,9 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource-url=jdbc::postgresql://x:x/database_name
 spring.datasource.username=postgres
 spring.datasource.password=password
+
+# JPA auto table creation
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
